# FCoP

./: .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  Dockerfile  README.md  README.zh.md  fcop-README.pypi.md  fcop_events.jsonl  glama.json  pyproject.toml
.cursor/rules/: fcop-protocol.mdc  fcop-rules.mdc
.github/workflows/: release.yml  test-fcop-mcp.yml  test-fcop.yml
.scratch/: _msg_commit1_adr0033.txt  _msg_commit2_adr0033.txt  _pre_release_audit.py  _release_1_6_0_archive_msg.txt  _release_1_6_0_commit_msg.txt  _release_sop_v2_closure_msg.txt  _v1_6_0_tag_msg.txt
adr/: ADR-0001-library-api.md  ADR-0002-package-split-and-migration.md  ADR-0003-stability-charter.md  ADR-0004-time-is-filesystem.md  ADR-0005-agent-output-layering.md  ADR-0006-host-neutral-rule-distribution.md  ADR-0007-fcop-1.0-protocol-freeze-charter.md  ADR-0008-json-schema-as-machine-readable-spec.md  ADR-0009-review-file-type-and-grammar.md  ADR-0010-agent-layer-field.md  ADR-0011-task-risk-level-field.md  ADR-0012-review-decision-needs-human.md  ADR-0013-review-human-approval.md  ADR-0014-skill-tools-risk-metadata.md  ADR-0015-fcop-1.0-ai-os-protocol-charter.md  ADR-0016-json-schema-for-7-abstractions.md  ADR-0017-review-file-type-minimal.md  ADR-0018-event-model.md  ADR-0019-failure-and-recovery-semantics.md  ADR-0020-agent-boundary-and-capability.md  ADR-0021-encoding-abstraction.md  ADR-0022-workspace-directory-convention.md  ADR-0023-agent-layer-governance-field.md  ADR-0024-task-risk-level.md  ADR-0025-review-needs-human.md  ADR-0026-review-human-approval.md  ADR-0027-skill-tools-risk-metadata.md  ADR-0028-auto-risk-assessment.md  ADR-0029-fcop-behavior-governance-charter.md  ADR-0030-bis-capability-enforcement-accountability-model.md  ADR-0030-capability-governance-boundary.md  ADR-0031-governance-alert-layer.md  ADR-0032-fcop-audit-protocol-inspection.md  ADR-0033-trailing-slug-filename-adoption.md  ADR-0034-fcop-internal-external-document-convention.md  ADR-0035-lifecycle-directory-and-tool-layers.md  ADR-0036-lifecycle-event-layer.md  ADR-0038-fcop-boundary-charter.md  ADR-0039-fcop-freeze-discipline-and-runtime-absorption-era.md  ADR-0040-canonical-one-liner-two-layer-convention.md  (+3 more)
dist_322/: fcop-3.2.2-py3-none-any.whl
dist_330/: fcop-3.0.3-py3-none-any.whl
dist_fcop/: fcop-3.2.0-py3-none-any.whl
dist_mcp/: fcop_mcp-3.2.0-py3-none-any.whl
docs/: MIGRATION-0.6.md  MIGRATION-1.0.md  MIGRATION-1.1.md  MIGRATION-3.0.md  MIGRATION-3.0.zh.md  fcop-standalone.en.md  fcop-standalone.md  getting-started.en.md  getting-started.md  glama-directory.md  index.html  issue-2-reply-body.md  issue-2-reply-draft.md  mcp-tools.md  release-process.md  release-report-v1.1.md  repositioning-report-v1.1-post.md  upgrade-fcop-mcp.md  worktree-本机-Bridgeflow-同步说明.md
docs/_archived/: README.md  fcop-primer.en.md
docs/adr/: 0002-lifecycle-authority-and-ledger.md
docs/agents/: LETTER-TO-ADMIN.md  fcop.json
docs/releases/: 0.6.0.md  0.6.1.md  0.6.2.md  0.6.3.md  0.6.4.md  0.6.5.md  0.6.6.md  0.7.0.md  0.7.1.md  0.7.2.md  1.0.0-rc.1.md  1.0.0.md  1.0.1.md  1.1.0.md  1.2.1.md  1.3.0.md  1.3.1-decision.md  1.3.1.md  1.4.0.md  1.5.0.md  1.5.1.md  3.2.3.md  3.2.4.md  3.2.5.md  RELEASE-CHECKLIST.md  csdn-post-essay-06-zh.md  devto-post-essay-06-en.md  devto-post-tetris-tutorial-en.md  forum-post-essay-06-en.CLEAN.txt  (+3 more)
essays/: README.md  ai-must-write-it-down.devto.md  ai-must-write-it-down.en.md  ai-must-write-it-down.md  evolution-reverse-absorption.en.md  evolution-reverse-absorption.md  fcop-natural-protocol.en.md  fcop-natural-protocol.md  fcop-tmpa-lineage.en.md  fcop-tmpa-lineage.md  from-coordination-to-governance.en.md  from-coordination-to-governance.md  gate-design-pitfalls-case-studies.en.md  gate-design-pitfalls-case-studies.md  looking-without-touching.csdn.md  looking-without-touching.en.md  looking-without-touching.md  the-day-we-almost-added-custody.en.md  the-day-we-almost-added-custody.md  the-supersedes-field-story.en.md  the-supersedes-field-story.md  what-agents-say-about-fcop.csdn.md  what-agents-say-about-fcop.en.md  what-agents-say-about-fcop.md  what-five-ai-models-say-about-fcop.cursor-forum.md  what-five-ai-models-say-about-fcop.en.md  what-five-ai-models-say-about-fcop.md  when-agents-learn-from-their-own-wreckage.csdn.md  when-agents-learn-from-their-own-wreckage.devto.md  when-agents-learn-from-their-own-wreckage.en.md  when-agents-learn-from-their-own-wreckage.md  when-ai-organizes-its-own-work.en.md  when-ai-organizes-its-own-work.md  when-ai-vacates-its-own-seat.en.forum.md  when-ai-vacates-its-own-seat.en.md  when-ai-vacates-its-own-seat.md  when-the-agent-picked-up-its-tools.csdn.md  when-the-agent-picked-up-its-tools.cursor-forum.md  when-the-agent-picked-up-its-tools.devto.md  when-the-agent-picked-up-its-tools.en.md  (+3 more)
fcop/: LETTER-TO-ADMIN.md  MIGRATED_FROM_DOCS_AGENTS.md
mcp/: README.md  fcop_events.jsonl  pyproject.toml  server.json
mcp/dist_330/: fcop_mcp-3.0.3-py3-none-any.whl
mcp/scripts/: prerelease_check.py
mcp/src/fcop_mcp/: _version.py  server.py
mcp/src/fcop_mcp/gal/: __init__.py  _alerts.py  _drift.py
mcp/src/fcop_mcp/governance/: __init__.py  _tools.py  events.py  interceptor.py  skill_registry.yaml  skill_resolver.py
mcp/tests/: test_governance.py  test_write_guard.py
primer/: fcop-primer.en.md  fcop-primer.md
scripts/: _commit_msg.txt  _docs_commit_msg.txt  _v150_commit_msg.txt  _v151_commit_msg.txt  fcop_prerelease_check.py  inject_workflow_constraint.py  inventory_drift.py  p1_batch_update.py  patch_protocol_version.py  patch_rules_version.py  patch_tags.py  patch_write_guard.py  publish_devto_article.py  release_audit.py  rule_encoding_guard.py
spec/: README.md  codeflow-core.mdc  fcop-3.0-rfc.md  fcop-3.0-rfc.zh.md  fcop-3.0-spec.md  fcop-3.0-spec.zh.md  fcop-runtime-protocol-v1.0.md  fcop-runtime-protocol-v1.1.md  fcop-runtime-protocol-v1.1.zh.md  fcop-spec-v1.0.3.md  fcop-spec.md  fcop-v3-spec.md  fcop-v3-spec.zh.md
tests/: conftest.py  test_init_v3_topology.py
workspace/: README.md
(+406 files in other folders)
