[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "fcop"
dynamic = ["version"]
description = "FCoP protocol: official Python library — Project API, task/report/issue files, filename parsing, bundled rules. PyYAML only; not an MCP server."
# PyPI long text must be library-only. Root README.md is the monorepo tour + MCP;
# see fcop-README.pypi.md (MCP is the separate fcop-mcp distribution).
readme = "fcop-README.pypi.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "FCoP Maintainers" },
]
keywords = [
    "fcop",
    "multi-agent",
    "agent-coordination",
    "file-based-protocol",
    "protocol",
    "llm-tools",
    "agent-framework",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
# Runtime dependencies:
# - pyyaml: FCoP files are UTF-8 markdown with a YAML frontmatter block,
#   so YAML parsing is core to the protocol.
# - jsonschema: per ADR-0016, v1.0 ships seven JSON Schemas under
#   spec/schemas/ as the single source of truth for the protocol body.
#   The reference implementation validates frontmatter against those
#   schemas on read/write. No MCP, no LLM, no network deps — those live
#   in the fcop-mcp package.
dependencies = [
    "pyyaml>=6.0,<7.0",
    "jsonschema>=4.0,<5.0",
]

[project.optional-dependencies]
# Dev tooling. `pip install -e .[dev]` pulls in everything needed to
# contribute: test runner, linter, formatter, type checker, build tools.
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.10",
    "build>=1.2",
    "twine>=5.0",
    "types-pyyaml",
]

[project.scripts]
# Console entry point. Up through fcop 0.7.x this called the 0.5→0.6
# legacy compat shim (which only printed migration guidance and exited
# 1). v1.0 promotes ``fcop`` to a real subcommand dispatcher; bare
# ``fcop`` (no subcommand) still prints the legacy guidance for
# backward compat with users who upgrade in place. The first real
# subcommand is ``fcop migrate-workspace`` (ADR-0022).
fcop = "fcop.cli._main:main"

[project.urls]
Homepage = "https://github.com/joinwell52-AI/FCoP"
Repository = "https://github.com/joinwell52-AI/FCoP"
Issues = "https://github.com/joinwell52-AI/FCoP/issues"
Changelog = "https://github.com/joinwell52-AI/FCoP/blob/main/CHANGELOG.md"
Documentation = "https://github.com/joinwell52-AI/FCoP/blob/main/docs/getting-started.en.md"

# ── Hatchling build configuration ─────────────────────────────────────

[tool.hatch.version]
path = "src/fcop/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/fcop"]

# Hatchling's wheel builder picks up .py / .typed by default. Our
# bundled data (rules .mdc + letter .md + team templates .md / .json)
# uses non-Python extensions and needs explicit include globs. We
# avoid `force-include` here because its source paths are inside the
# package tree and hatchling would end up shipping each file twice
# (once as part of `packages`, once via force-include) — observed
# empirically and confirmed in hatchling issues.
include = [
    "src/fcop/rules/_data/*.mdc",
    "src/fcop/rules/_data/*.md",
    "src/fcop/teams/_data/**/*.md",
    "src/fcop/teams/_data/**/*.json",
    "src/fcop/_data/schemas/*.schema.json",
]

[tool.hatch.build.targets.sdist]
include = [
    "src/fcop",
    "fcop-README.pypi.md",
    "README.md",
    "README.zh.md",
    "LICENSE",
    "CHANGELOG.md",
    "pyproject.toml",
]
exclude = [
    "mcp",
    "tests",
    "docs",
    "examples",
    "scripts",
    ".github",
]

# ── Tooling configuration ─────────────────────────────────────────────

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src"]
# integrations/ holds platform-specific helper scripts (e.g. Windows file
# association installer) that are not shipped in the fcop or fcop-mcp
# wheels. They use Win32 API constants that legitimately violate pep8
# naming, so we exclude them from the release-time lint gate.
extend-exclude = ["integrations"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "N",   # pep8-naming
    "SIM", # flake8-simplify
]
ignore = [
    "E501",  # line too long — handled by formatter
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["N802", "N803"]  # test names don't have to follow naming rules

[tool.mypy]
python_version = "3.10"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
disallow_untyped_defs = true
show_error_codes = true
files = ["src/fcop"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[tool.pytest.ini_options]
minversion = "8.0"
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: integration tests that touch the filesystem",
]
